fixed info spacing

--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@
 
 .info a { 
   text-decoration: none; 
-  margin-right: 7px;
+  margin-right: 4px;
   color: rgb(132, 132, 132);
 }
 
